Bugfix/quality img on mobile screen (#64)
* fix: quality on diffrent screens

* fix: size subtitle

* fix: quality on diffrent screens

* feat: add quality 80

---------

--- a/assets/sass/case-page/sections/_section-solution.scss
+++ b/assets/sass/case-page/sections/_section-solution.scss
@@ -108,7 +108,7 @@ tbody tr:last-child td:last-child {
 		padding-bottom: 2.5rem;
 	}
 
-	.section-value-driven-footer .case-study-page__subtitle {
+	.section-solution .case-study-page__subtitle {
 		width: 100%;
 	}
 
