--- a/assets/sass/case-page/sections/_section-value-driven.scss
+++ b/assets/sass/case-page/sections/_section-value-driven.scss
@@ -136,7 +136,6 @@
 	}
 
 	.section-value-driven__inner .case-study-page__subtitle {
-		width: 36.375rem;
 		height: initial;
 		margin-bottom: 0.5rem;
 	}
@@ -194,7 +193,6 @@
 	}
 
 	.section-value-driven__inner .case-study-page__subtitle {
-		width: 17.6875rem;
 		margin-bottom: 1.25rem;
 	}
 
