--- a/assets/sass/case-page/sections/_top-section.scss
+++ b/assets/sass/case-page/sections/_top-section.scss
@@ -4,6 +4,10 @@
 	padding-bottom: 2.25rem;
 }
 
+.img-project{
+  object-fit: contain;
+}
+
 .top-section__inner .categories-list {
 	margin: 0;
 	margin-bottom: 2.375rem;
@@ -11,7 +15,6 @@
 
 .top-section-img__container {
 	width: 19.6875rem;
-	height: 19.6875rem;
 }
 
 @media (max-width: $breakpoint-lg) {
@@ -25,7 +28,6 @@
 
 	.top-section-img__container {
 		width: 12.875rem;
-		height: 12.875rem;
 	}
 }
 
@@ -45,6 +47,5 @@
 
 	.top-section-img__container {
 		width: 100%;
-		height: 21.4375rem;
 	}
 }
