--- a/assets/sass/home-page/sections/_section-cases.scss
+++ b/assets/sass/home-page/sections/_section-cases.scss
@@ -99,7 +99,7 @@
 		}
 
 		.cases-slider .swiper-wrapper .case-card {
-			width: 20rem;
+			width: 23rem;
 		}
 
 		.cases-slider {
